# internal/apiserver/usecase/auth.go
@@ -3,8 +3,7 @@ package usecase
 import (
 	"context"
 
-	"github.com/omekov/sample/internal/apiserver/delivery/http"
-	"github.com/omekov/sample/pkg/domain"
+	"github.com/omekov/sample/internal/model"
 	"github.com/omekov/sample/pkg/jwt"
 	"github.com/omekov/sample/pkg/repository/postgresql"
 )
@@ -14,15 +13,27 @@ type Auth struct {
 	jwt      *jwt.Config
 }
 
-func NewAuth(repo *postgresql.Repositories, jwt *jwt.Config) *Auth {
+func NewAuth(userRepo *postgresql.UserRepo, jwt *jwt.Config) *Auth {
 	return &Auth{
-		userRepo: repo.User,
+		userRepo: userRepo,
 		jwt:      jwt,
 	}
 }
 
-func (uc Auth) FindByEmail(ctx context.Context, credential *http.Credential) (domain.User, error) {
-	// uc.jwt.NewAccessJWT()
-	uc.jwt.RefreshTokenSecret
-	return uc.userRepo.GetByName(ctx, credential.Username)
+func (uc Auth) SignIn(ctx context.Context, credential *model.Credential) (model.Token, error) {
+	token := model.Token{}
+	if err := uc.jwt.Validate(*credential); err != nil {
+		return token, err
+	}
+
+	user, err := uc.userRepo.GetByName(ctx, credential.Username)
+	if err != nil {
+		return token, err
+	}
+
+	if err = uc.jwt.ComparePassword(user.Password, credential.Password); err != nil {
+		return token, err
+	}
+
+	return uc.jwt.GetToken(&user)
 }
